<resources>
    <string name="app_name">Tinte Webcoms</string>
    <string name="title_activity_library">Library</string>
    <string name="title_activity_available_comic_list">AvailableComicListActivity</string>
    <string name="title_activity_add_webcom">Add webcom</string>
    <string name="title_activity_webcom_info">WebcomInfoActivity</string>
    <string name="title_activity_page_list">PageListActivity</string>
    <string name="title_activity_read_webcom">ReadWebcomActivity</string>
    <string name="title_activity_about">About</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="sorting">Sort by</string>
    <string name="sorting_title">Title</string>
    <string name="sorting_last_read">Last read</string>
    <string name="sorting_last_updated">Last updated</string>
    <string name="sorting_unread">Unread</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>

    <string name="library_selecting">Selected: %d</string>
    <string name="library_selecting_menu_delete">Delete from library</string>
    <string name="library_delete_selected_dialog_message">This will delete all downloaded comics and reading progress. Continue?</string>

    <string name="webcom_info_webpage">Webpage:</string>
    <string name="webcom_info_format">Format:</string>
    <string name="webcom_info_pages_label">Pages:</string>
    <string name="webcom_info_chapters_label">Chapters:</string>
    <string name="webcom_info_pages">pages</string>
    <string name="webcom_info_chapters">chapters</string>
    <string name="webcom_info_add">Add</string>

    <string name="chapter_item_downloaded">Downloaded</string>
    <string name="chapter_item_downloading">Downloading</string>
    <string name="chapter_item_menu_download">Download</string>
    <string name="chapter_item_menu_remove">Remove</string>
    <string name="chapter_item_menu_mark_read">Mark sa read</string>
    <string name="chapter_item_menu_mark_read_this">this</string>
    <string name="chapter_item_menu_mark_previous_read">this and previous</string>
    <string name="chapter_item_menu_mark_later_read">this and later</string>
    <string name="chapter_item_menu_mark_unread">Mark as unread</string>
    <string name="chapter_item_menu_mark_unread_this">this</string>
    <string name="chapter_item_menu_mark_previous_unread">this and previous</string>
    <string name="chapter_item_menu_mark_later_unread">this and later</string>

    <string name="chapter_list_toolbar_menu_filter">Filter</string>
    <string name="chapter_list_toolbar_menu_sorting_order">Change order</string>
    <string name="chapter_list_toolbar_menu_download">Download</string>
    <string name="chapter_list_toolbar_download_1">Download next</string>
    <string name="chapter_list_toolbar_download_10">Download 10</string>
    <string name="chapter_list_toolbar_download_custom">Download few</string>
    <string name="chapter_list_download_few_title">Insert nuber of chapters</string>
    <string name="chapter_list_filters_menu_read">Read</string>
    <string name="chapter_list_filters_menu_unread">Unread</string>
    <string name="chapter_list_filters_menu_downloaded">Downloaded</string>
    <string name="chapter_list_filters_menu_undownloaded">Undownloaded</string>
    <string name="chapter_list_filters_menu_clear">Clear</string>

    <string name="read_chapter_menu_source">Open source</string>
    <string name="read_chapter_downloading">Downloading</string>
    <string name="read_chapter_cant_download">Unable to download page</string>

    <string name="global_preferences_library_style_title">Librery style</string>
    <string-array name="global_preferences_library_style">
        <item>List</item>
        <item>Grid</item>
    </string-array>
    <string name="global_preferences_grid_columns_vertical">Grid columns vertical</string>
    <string name="global_preferences_grid_columns_horizontal">Grid columns horizontal</string>
    <string name="global_preferences_order_title">Default list order</string>
    <string-array name="global_preferences_order_list">
        <item>Smart</item>
        <item>Ascending</item>
        <item>Decreasing</item>
    </string-array>
    <string name="global_preferences_autodownload_title">Autodownload unread chapters</string>
    <string-array name="global_preferences_autodownload_list">
        <item>Don\'t download chapters automatically</item>
        <item>Default reading order</item>
        <item>Oldest</item>
        <item>Newest</item>
    </string-array>
    <string name="global_preferences_autodownload_number">Number of chapters to autodownload</string>
    <string name="global_preferences_autoremove_title">Autodelete read chapters</string>
    <string name="global_preferences_autoremove_number">Skip last when autoremoving</string>
    <string name="global_preferences_notify">Notify when finishing downloads</string>
    <string name="global_preferences_autoupdate">Update comics automatically</string>
    <string name="global_preferences_autoupdate_time">Time between updates</string>
    <string name="global_preferences_downloat_limit">Limit downloading</string>
    <string-array name="global_preferences_download_limit_list">
        <item>No limit</item>
        <item>Autodownloads only over wifi</item>
        <item>Autodownloads and updates only over wifi</item>
        <item>All downloads only over wifi</item>
    </string-array>

    <string name="chapter_preferences_odrer_title">List order</string>
    <string-array name="chapter_perferences_order_list">
        <item>Use global setting</item>
        <item>Ascending</item>
        <item>Decreasing</item>
    </string-array>
    <string name="chapter_preferences_autodownload_global">Use global settings for autodownloading</string>
    <string name="chapter_preferences_autodownload_title">Autodownload unread chapters</string>
    <string-array name="chapter_preferences_autodownload_list">
        <item>Don\'t download chapters automatically</item>
        <item>Oldest</item>
        <item>Newest</item>
    </string-array>
    <string name="chapter_preferences_autodownload_number">Number of chapters to autodownload</string>
    <string name="chapter_preferences_autoremove_global">Use global settings for autodeleting</string>
    <string name="chapter_preferences_autoremove_title">Autodelete read chapters</string>
    <string name="chapter_preferences_autoremove_number">Skip last when autoremoving</string>

    <string name="about_general_title">General</string>
    <string name="about_general_content">This is free and open project aiming to provide comfortable wey to read and keep track of internet comics.\n
    Have in mind this is still early version. It might lack features and polish, but it is developing quickly.</string>
    <string name="about_issues_title">Issues</string>
    <string name="about_issues_content">If you found a bug or want to request a feature or new comic to be added, create an issue under https://gitlab.com/halftough/webcom-reader/issues.
        It helps making application better.</string>

    <string name="update_service_updating">Updating %s</string>
    <string name="download_service_downloading">Downloading %s</string>
    <string name="download_service_downloading_few">Downloading comics</string>
    <string name="download_service_downloading_content">%d/%d</string>
    <string name="download_service_downloading_content_finished">%d finished</string>
    <string name="download_service_downloading_content_few">%s %d/%d</string>
    <string name="download_service_downloading_content_few_finished">%s %d finished</string>
    <string name="download_service_error">Error</string>
    <string name="download_service_wifi_only">Downloading over cellural data has been blocked by the user.\nConnect to wifi or change settings.</string>

</resources>
