<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.WebcomInfoActivity"
    tools:showIn="@layout/webcom_info_activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="@dimen/fab_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/webcomInfoIcon"
                    android:layout_width="200dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/webcomInfoTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="8dp"
                        android:text="Title"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="6dp"
                            android:layout_weight="0"
                            android:text="@string/webcom_info_format"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                        <TextView
                            android:id="@+id/webcomInfoFormat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="format" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/webcomInfoPagesLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="6dp"
                            android:layout_weight="0"
                            android:text="TextView"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            tools:text="@string/webcom_info_pages_label" />

                        <TextView
                            android:id="@+id/webcomInfoPageNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="0" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/webcomInfoDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="@dimen/fab_margin"
                android:text="Description" />

            <Button
                android:id="@+id/webcomInfoAddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:layout_weight="0"
                android:foregroundGravity="center_horizontal"
                android:onClick="addWebcom"
                android:text="@string/webcom_info_add" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>